fix button gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 20px 40px 40px 50px;
+  margin: 20px 20px 20px 50px;
 }
 .hide {
   display: none;
